# auto-profile-tg

./: .gitignore  README.md  default.nix  flake.nix  module.nix  pyproject.toml  setup.py  shell.nix
.github/workflows/: test.yaml
auto-profile-tg/: requirements.txt
auto_profile_tg/: __main__.py  config.py  main.py  pyproject.toml
auto_profile_tg/utils/: bio_utils.py  prayer_utils.py  weather_utils.py
